--- a/exp/app/css/index.css
+++ b/exp/app/css/index.css
@@ -1,3 +1,9 @@
+button,a,li,p,span {
+    touch-action: manipulation;
+    -webkit-user-select: none;
+    -webkit-user-drag: none;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
 .page {
     bottom:0;
     position:absolute;
@@ -10,11 +16,10 @@
     background:#00D0BC;
     color:#FFFFFF;
 }
-.index {
-}
 .page-bg{
     height: 100%;
     width: 100%;
+    background-position: center;
     background-size: cover;
 }
 .list{
@@ -41,6 +46,44 @@
     border: none;
     border-radius: 4px;
     background-color: #FF5722;
+}
+.go-btn a,.go-btn a:active,.go-btn a:visited,.go-btn a:link{
+    color: #fff;
+    display: block;
+    text-decoration: none;
+}
+
+.top-btn{
+    height: 44px;
+    width: 44px;
+    display: block;
+    position: fixed;
+    top:0;
+    z-index: 99999;
+    text-indent: -100em;
+}
+.top-btn::before{
+    content: "";
+    display: block;
+    height: 20px;
+    width: 20px;
+    position: fixed;
+    top: 12px;
+    background-size: cover;
+}
+.back-btn{
+    left: 0;
+}
+.back-btn::before{
+    left: 12px;
+    background-image: url("../imgs/back.jpg");
+}
+.sure-btn{
+    right: 0;
+}
+.sure-btn::before{
+    right: 12px;
+    background-image: url("../imgs/sure.jpg");
 }
 @keyframes rotateFall {
     0% {
