--- a/exp/app/css/index.css
+++ b/exp/app/css/index.css
@@ -4,6 +4,9 @@ button,a,li,p,span {
     -webkit-user-drag: none;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+li{
+    list-style: none;
+}
 .page {
     bottom:0;
     position:absolute;
@@ -13,8 +16,8 @@ button,a,li,p,span {
     padding-top: 44px;
 }
 .hello {
-    background:#00D0BC;
-    color:#FFFFFF;
+    /*background:#00D0BC;*/
+    color:#000;
 }
 .page-bg{
     height: 100%;
@@ -84,6 +87,28 @@ button,a,li,p,span {
 .sure-btn::before{
     right: 12px;
     background-image: url("../imgs/sure.jpg");
+}
+/*    hello.index    */
+.eating-card {
+    background: #00D0BC;
+    background-size: cover;
+    background-position: center;
+    height: 260px;
+    width: 49%;
+    border-radius: 2px;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.49);
+    position: relative;
+    margin: 0.5%;
+    float: left;
+}
+.eating-card-title {
+    color: #FFFFFF;
+    position: absolute;
+    bottom: 0;
+    height: 60px;
+    background-color:rgba(173, 171, 163, 0.7);
+    width: 100%;
+    padding: 20px 10px;
 }
 @keyframes rotateFall {
     0% {
