--- a/exp/app/css/index.css
+++ b/exp/app/css/index.css
@@ -93,12 +93,12 @@ li{
     background: #00D0BC;
     background-size: cover;
     background-position: center;
-    height: 260px;
-    width: 49%;
+    height: 240px;
+    width: 48%;
     border-radius: 2px;
     box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.49);
     position: relative;
-    margin: 0.5%;
+    margin: 1%;
     float: left;
 }
 .eating-card-title {
@@ -109,6 +109,78 @@ li{
     background-color:rgba(173, 171, 163, 0.7);
     width: 100%;
     padding: 20px 10px;
+}
+.box {
+    position: relative;
+}
+.del-box {
+    height: 30px;
+    width: 30px;
+    display: block;
+    position: absolute;
+    top: 5px;
+    right: 0;
+    text-decoration: none;
+    text-underline: none;
+}
+.del-box::before{
+    content: "X";
+    display: block;
+    font-size: 16px;
+    font-family: "Arial",sans-serif;
+    color: #fff;
+}
+.dialog{
+    width: 260px;
+    height: 140px;
+    position: fixed;
+    top:50%;
+    transform: translateY(-50%);
+    left: 0;
+    right: 0;
+    margin: auto;
+    background: #f6f6f6;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.49);
+    display: none;
+}
+.dialog input{
+    height: 40px;
+    width: 60%;
+    position: absolute;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #f6f6f6;
+    border: none;
+    border-bottom: 1px solid #ffffff;
+    color: #666;
+}
+.cofilm-btn{
+    font-size: 16px;
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 60%;
+}
+.add-btn{
+    color: #fff;
+    display: block;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 4px;
+    background-color: #FF5722;
+    float: left;
+}
+.cancel-btn {
+    color: #fff;
+
+    display: block;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 4px;
+    background-color: #FF5722;
+    float: right;
 }
 @keyframes rotateFall {
     0% {
@@ -125,7 +197,7 @@ li{
         transform: rotateZ(16deg);
     }
     100% {
-        transform: translateY(100%) rotateZ(17deg);
+        transform: translateX(-100%) rotateZ(17deg) scale(.6);
     }
 }
 @keyframes slideOutLeft {
@@ -133,12 +205,7 @@ li{
         transform: translateX(-100%);
     }
 }
-@keyframes rotateOutNewspaper {
-    to {
-        transform: translateZ(-3000px) rotateZ(360deg);
-        opacity: 0;
-    }
-}
+
 @keyframes scaleUp {
     from {
         opacity: 0.3;
