--- a/exp/app/css/index.css
+++ b/exp/app/css/index.css
@@ -1,4 +1,4 @@
-button,a,li,p,span {
+﻿button,a,li,p,span {
     touch-action: manipulation;
     -webkit-user-select: none;
     -webkit-user-drag: none;
@@ -29,7 +29,7 @@ li{
 }
 .list {
     color:#000;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 .result{
     color:#FFFFFF;
@@ -37,7 +37,7 @@ li{
 }
 .btn-box{
     position: fixed;
-    bottom: 10px;
+    bottom: 0;
     left: 0;
     right: 0;
     margin: auto;
@@ -56,7 +56,7 @@ li{
     font-size: 18px;
     width: 80%;
     padding: 15px 0;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -173,6 +173,7 @@ li{
     right: 0;
     margin: auto;
     background: #f6f6f6;
+    border-radius: 4px;
     box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.49);
     transition: .5s ease transform;
 }
